--- a/app/src/main/res/drawable/blue_card_background.xml
+++ b/app/src/main/res/drawable/blue_card_background.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:centerColor="#4a649f"
+        android:endColor="#0c306b"
+        android:startColor="#505e9c"
         android:type="linear" />
 </shape>
