--- a/app/src/main/res/layout/card_main_overview.xml
+++ b/app/src/main/res/layout/card_main_overview.xml
@@ -99,18 +99,22 @@
 
             </LinearLayout>
 
-            <include layout="@layout/card_credit_card" />
+            <include
+                layout="@layout/card_credit_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/text_erro_msg"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:paddingTop="16dp"
             android:text="@string/networ_error"
+            android:visibility="gone"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/view" />
