--- a/app/src/main/res/layout/card_main_overview.xml
+++ b/app/src/main/res/layout/card_main_overview.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     card_view:cardCornerRadius="@dimen/card_radius"
     card_view:cardElevation="@dimen/card_elevation"
     card_view:cardPreventCornerOverlap="false"
@@ -32,7 +33,7 @@
             card_view:layout_constraintTop_toTopOf="parent" />
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/view_extrato_marcador"
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginEnd="16dp"
@@ -53,7 +54,7 @@
             android:paddingTop="16dp"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view" />
+            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador" />
 
         <LinearLayout
             android:id="@+id/layout_conteudo"
@@ -62,7 +63,7 @@
             android:orientation="vertical"
             android:visibility="gone"
             card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view">
+            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,8 +103,7 @@
             <include
                 layout="@layout/card_credit_card"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp" />
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
@@ -117,7 +117,7 @@
             android:visibility="gone"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view" />
+            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador" />
 
     </android.support.constraint.ConstraintLayout>
 
