--- a/app/src/main/res/layout/card_main_overview.xml
+++ b/app/src/main/res/layout/card_main_overview.xml
@@ -9,12 +9,14 @@
     card_view:cardPreventCornerOverlap="false"
     card_view:cardUseCompatPadding="true">
 
-    <android.support.constraint.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/TextView_current_balance"
+            android:id="@+id/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -26,44 +28,35 @@
             android:paddingTop="8dp"
             android:text="@string/overview"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
-            card_view:layout_constraintHorizontal_bias="0.0"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:textSize="20sp" />
 
         <View
-            android:id="@+id/view_extrato_marcador"
-            android:layout_width="0dp"
+            android:id="@+id/view_marcador"
+            android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
-            android:background="@android:color/darker_gray"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/TextView_current_balance" />
+            android:background="@android:color/darker_gray" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
             android:paddingTop="16dp"
             card_view:layout_constraintLeft_toLeftOf="parent"
             card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador" />
+            card_view:layout_constraintTop_toBottomOf="@+id/view_marcador" />
 
         <LinearLayout
             android:id="@+id/layout_conteudo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador">
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -109,16 +102,14 @@
 
         <TextView
             android:id="@+id/text_erro_msg"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="16dp"
+            android:visibility="gone"
             android:paddingTop="16dp"
             android:text="@string/networ_error"
-            android:visibility="gone"
-            card_view:layout_constraintLeft_toLeftOf="parent"
-            card_view:layout_constraintRight_toRightOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/view_extrato_marcador" />
+            android:textAlignment="center" />
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
