--- a/app/src/main/res/layout/card_credit_card.xml
+++ b/app/src/main/res/layout/card_credit_card.xml
@@ -12,7 +12,7 @@
         android:id="@+id/credit_card_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/blue_card_background"
+        android:background="@drawable/card_background"
         android:padding="16dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -23,7 +23,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/logo"
-            android:src="@drawable/mastercard_logo" />
+            android:src="@drawable/master" />
 
         <LinearLayout
             android:layout_width="match_parent"
